Closed
Bug 1435372
Opened 8 years ago
Closed 8 years ago
MilestoneEntry pass constructor argument by const reference
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
mozilla60
| Tracking | Status | |
|---|---|---|
| firefox60 | --- | fixed |
People
(Reporter: jeanluc.bonnafoux, Assigned: longsonr)
Details
Attachments
(1 file)
|
445 bytes,
patch
|
birtles
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:58.0) Gecko/20100101 Firefox/58.0
Build ID: 20180128191252
Steps to reproduce:
Static code analysis (cppcheck v1.82) points out that constructor of class MilestoneEntry should have its first argument (type: nsSMILMilestone) passed by const reference.
Actual results:
Current code works but some unnecessary object copy may happen.
Expected results:
passing argument by const reference would avoid unnecessary object copy.
Updated•8 years ago
|
Component: DOM → SVG
| Assignee | ||
Comment 1•8 years ago
|
||
Assignee: nobody → longsonr
Attachment #8948074 -
Flags: review?(bbirtles)
| Assignee | ||
Updated•8 years ago
|
Attachment #8948074 -
Attachment is patch: true
Comment 2•8 years ago
|
||
Comment on attachment 8948074 [details] [diff] [review]
patch
Review of attachment 8948074 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks for doing this.
Attachment #8948074 -
Flags: review?(bbirtles) → review+
Updated•8 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 3•8 years ago
|
||
Pushed by longsonr@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/803bb3cae552
pass nsSMILMilestone into the constructor of MilestoneEntry by const reference to avoid an unnecessary object copy r=birtles
Comment 5•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox60:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in
before you can comment on or make changes to this bug.
Description
•